src/tests/fixtures/arguments/ArgWithNoType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class Query {
  /** @gqlField */
  hello({ greeting }: { greeting }): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/ArgWithNoType.invalid.ts:4:25 - error: Expected GraphQL field argument to have a type.

4   hello({ greeting }: { greeting }): string {
                          ~~~~~~~~
